######################################################
ASHS (Automatic Segmentation of Hippocampal Subfields)
Release Notes
######################################################

=========================
Revision 90, May 2012
=========================

New in this Revision:
---------------------

* Fixed various bugs resulting from changes in revision 80

* Changed the way cross-valudation is performed in ashs_train. Now, for each
  cross-valudation experiment, we set up a "mock atlas" directory and run the
  main ASHS script to perform cross-validation. 


=========================
Revision 81, April 2012
=========================

New in this Revision:
---------------------

* Resolved some issues with clashes between PATH and other environment vars
  and the variables exported by ASHS. All variables exported by ASHS now
  start with the prefix ASHS_. The PATH is set in each ashs_*_qsub.sh script
  so that the user's global PATH set in the .bash-profile does not override
  the ASHS path.

=========================
Revision 80, April 2012
=========================

New in this Revision:
---------------------

* You no longer need SGE to run ashs_main. There are three ways to run ASHS. You
  can just run it in a single process, which is really slow. You can run a lot
  of ashs_main scripts, each in a separate process, by using SGE. Or you can let
  ASHS launch sub-jobs using SGE. This was the behaviour in the older revisions.
  For the latter option, you will need to use the -q or -Q options.

* The training component (ashs_train) still requires SGE and uses it to launch 
  sub-jobs. 


=========================
Revision 76, April 2012
=========================

New in this Revision:
---------------------

* ASHS includes a training component. Given a set of images with corresponding 
  segmentations, you can use it to create your own atlas set. See ashs_train.sh

* ASHS no longer requires manual 'slice markings'. Instead, if your protocol is