@@ -81,6 +81,7 @@ function usage()
 		                    but this can be modified with the -M flag.
 		  -M                The mat file provided with -m is used as the final T2/T1 registration.
 		                    ASHS will not attempt to run registration between T2 and T2.
+                  -t threads        Specify number of parallel threads the greedy runs
 		  -H                Tell ASHS to use external hooks for reporting progress, errors, and warnings.
 		                    The environment variables ASHS_HOOK_SCRIPT must be set to point to the appropriate
 		                    script. For an example script with comments, see ashs_default_hook.sh
@@ -139,7 +140,7 @@ fi
 unset ATLAS ASHS_MPRAGE ASHS_TSE ASHS_WORK STAGE_SPEC
 unset ASHS_SKIP_ANTS ASHS_SKIP_RIGID ASHS_TIDY ASHS_SUBJID
 unset ASHS_USE_QSUB ASHS_REFSEG_LEFT ASHS_REFSEG_RIGHT ASHS_REFSEG_LIST
-unset ASHS_QSUB_OPTS ASHS_PARALLEL_OPTS ASHS_QSUB_HOOK
+unset ASHS_QSUB_OPTS ASHS_PARALLEL_OPTS ASHS_QSUB_HOOK ASHS_GREEDY_THREADS
 unset ASHS_INPUT_T2T1_MAT ASHS_INPUT_T2T1_MODE
 
 # Set the default hook script - which does almost nothing
@@ -149,7 +150,7 @@ unset ASHS_USE_CUSTOM_HOOKS
 unset ASHS_SPECIAL_ACTION
 
 # Read the options
-while getopts "g:f:w:s:a:q:I:C:r:z:m:p:HNTdhVQPMB" opt; do
+while getopts "g:f:w:s:a:q:I:C:r:z:m:t:p:HNTdhVQPMB" opt; do
   case $opt in
 
     a) ATLAS=$(dereflink $OPTARG);;
@@ -164,6 +165,7 @@ while getopts "g:f:w:s:a:q:I:C:r:z:m:p:HNTdhVQPMB" opt; do
     P) ASHS_USE_PARALLEL=1;;
     q) ASHS_USE_QSUB=1; ASHS_QSUB_OPTS=$OPTARG;;
     p) ASHS_USE_PARALLEL=1; ASHS_PARALLEL_OPTS=$OPTARG;;
+    t) ASHS_GREEDY_THREADS=" -threads $OPTARG ";;
     z) ASHS_USE_QSUB=1; ASHS_QSUB_HOOK=$OPTARG;;
     C) ASHS_CONFIG=$(dereflink $OPTARG);;
     H) ASHS_USE_CUSTOM_HOOKS=1;;
@@ -394,7 +396,7 @@ SIDES="$ASHS_SIDES"
 
 # Run the stages of the script
 export ASHS_ROOT ASHS_WORK ASHS_SKIP_ANTS ASHS_SKIP_RIGID ASHS_SUBJID ASHS_CONFIG ASHS_ATLAS
-export ASHS_HEURISTICS ASHS_TIDY ASHS_MPRAGE ASHS_TSE ASHS_REFSEG_LEFT ASHS_REFSEG_RIGHT QOPTS ASHS_PARALLEL_OPTS
+export ASHS_HEURISTICS ASHS_TIDY ASHS_MPRAGE ASHS_TSE ASHS_REFSEG_LEFT ASHS_REFSEG_RIGHT QOPTS ASHS_PARALLEL_OPTS ASHS_GREEDY_THREADS
 export SIDES ASHS_HOOK_SCRIPT ASHS_HOOK_DATA
 export ASHS_INPUT_T2T1_MAT ASHS_INPUT_T2T1_MODE
 export ASHS_NO_BOOTSTRAP ASHS_USE_QSUB
